SERVER-11262 sharding/sync6.js failed on Win 32